# robochick-rs

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: rust.yml
mocks/: imposters.ejs
resources/config/: message_components.json
resources/tests/: challenge_request.json  message_components_param_value.json  reward_redemption_event.json  subscription_revoked.json
src/: auth.rs  client.rs  handler.rs  main.rs  reward.rs  robochick.rs  types.rs
src/reward/: ducks.rs  mod_feeder.rs
