[package]
name = "robochick-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
fastrand = "2.3.0"
hex = "0.4.3"
hmac = "0.12.1"
lambda_http = "0.17.0"
reqwest = { version = "0.12.23", features = ["json"] } 
serde = { version = "1.0.219", features = ["derive"] } 
serde_json = "1.0.143"
sha2 = "0.10.9"
strfmt = "0.2.5"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version =  "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
dotenvy = "0.15.7"
mockall = "0.13.1"
mockito = "1.7.0"
pretty_assertions = "1.4.1"

[lints.rust]
unused = { level = "allow", priority = -1 }
unsafe_code = "forbid"
