[package]
name = "robochick-rs"
version = "1.0.2"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
aws-config = { version = "1.8.18", default-features = false, features = [
    "behavior-version-latest",
] }
aws-sdk-dynamodb =  { version = "1.116.0" }
aws-sdk-secretsmanager = { version = "1.108.0"}
axum = "0.8.4"
chrono = "0.4.45"
fastrand = "2.3.0"
hex = "0.4.3"
hmac = "0.12.1"
lambda_http = "1.2.1"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls"
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
strfmt = "0.2.5"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
aws-sdk-dynamodb = { version = "1.116.0", features = ["test-util"] }
aws-smithy-mocks = "0.2.6"
tokio = { version = "1.47.1", features = ["macros", "rt",] }
dotenvy = "0.15.7"
mockall = "0.13.1"
mockito = "1.7.0"
pretty_assertions = "1.4.1"

[lints.rust]
unused = { level = "allow", priority = -1 }
unsafe_code = "forbid"

[profile.release]
opt-level = "s"
panic = "abort"
strip = "symbols"
codegen-units = 1
lto = true
